Fixed horizontal scrolling on Safari

--- a/touchdesigner-components/sources/tdcomps.css
+++ b/touchdesigner-components/sources/tdcomps.css
@@ -17,6 +17,17 @@
 
 
 /* HTML ------------------------------------------------------------------------------------------------------------------------- */
+html, body {
+  max-width: 100%;
+  overflow-x: clip;
+}
+
+@supports not (overflow-x: clip) {
+  html, body {
+    overflow-x: hidden;
+  }
+}
+
 :root{
     --td-bg-color:#2B2C2C;
     --td-dark-color: #1D1D1E;
